fixes visible on pane is to small with many pages, see #490

--- a/packages/silex-lib/src/css/property-tool.less
+++ b/packages/silex-lib/src/css/property-tool.less
@@ -196,7 +196,7 @@
       transition: max-height @silexUiTransitions;
     }
     &.expanded .body {
-      max-height: 300px;
+      max-height: inherit;
       margin: 10px;
     }
   }
